--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_screen_recording: ^2.0.24
   permission_handler: ^12.0.1
+  path_provider: ^2.1.5
+  file_picker: ^10.2.0
+  flutter_foreground_task: ^9.1.0
 
 dev_dependencies:
   flutter_test:
