--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,22 +28,23 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cupertino_icons: ^1.0.8
+  file_picker: ^10.2.0
+  firebase_auth: ^5.6.2
+  firebase_core: ^3.15.1
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
-  flutter_screen_recording: ^2.0.24
-  permission_handler: ^12.0.1
-  path_provider: ^2.1.5
-  file_picker: ^10.2.0
   flutter_foreground_task: ^9.1.0
+  flutter_screen_recording: ^2.0.24
+  image_picker: ^1.1.2
+  path_provider: ^2.1.5
+  permission_handler: ^12.0.1
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
+  flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
 
 # The following section is specific to Flutter packages.
 flutter:
@@ -57,13 +58,10 @@ flutter:
     - assets/images/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/to/asset-from-package
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
